logs/dag_id=db_dg/run_id=manual__2024-01-04T070044.090125+0000/task_id=create_post_DB/attempt=4.log
[2024-01-04T10:27:53.582+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: db_dg.create_post_DB manual__2024-01-04T07:00:44.090125+00:00 [queued]>
[2024-01-04T10:27:53.682+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: db_dg.create_post_DB manual__2024-01-04T07:00:44.090125+00:00 [queued]>
[2024-01-04T10:27:53.683+0000] {taskinstance.py:2171} INFO - Starting attempt 4 of 6
[2024-01-04T10:27:53.811+0000] {taskinstance.py:2192} INFO - Executing <Task(PostgresOperator): create_post_DB> on 2024-01-04 07:00:44.090125+00:00
[2024-01-04T10:27:53.816+0000] {standard_task_runner.py:60} INFO - Started process 1713 to run task
[2024-01-04T10:27:53.819+0000] {standard_task_runner.py:87} INFO - Running: ['airflow', 'tasks', 'run', 'db_dg', 'create_post_DB', 'manual__2024-01-04T07:00:44.090125+00:00', '--job-id', '69', '--raw', '--subdir', 'DAGS_FOLDER/create_database_dag.py', '--cfg-path', '/tmp/tmp9y1p6uv5']
[2024-01-04T10:27:53.822+0000] {standard_task_runner.py:88} INFO - Job 69: Subtask create_post_DB
[2024-01-04T10:27:54.078+0000] {task_command.py:423} INFO - Running <TaskInstance: db_dg.create_post_DB manual__2024-01-04T07:00:44.090125+00:00 [running]> on host 34fb0f920c20
[2024-01-04T10:27:54.326+0000] {taskinstance.py:2481} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='prady1900' AIRFLOW_CTX_DAG_ID='db_dg' AIRFLOW_CTX_TASK_ID='create_post_DB' AIRFLOW_CTX_EXECUTION_DATE='2024-01-04T07:00:44.090125+00:00' AIRFLOW_CTX_TRY_NUMBER='4' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-01-04T07:00:44.090125+00:00'
[2024-01-04T10:27:54.327+0000] {sql.py:276} INFO - Executing: 
create table if not exists incident_new(
    id serial ,
    impact integer,
    number varchar(50),
    severity integer,
    priority integer,
    assignment_group.value,
    resolve_time integer,
    category varchar(50),
    primary key(id)
)
[2024-01-04T10:27:54.347+0000] {base.py:83} INFO - Using connection ID 'postgres_connect' for task execution.
[2024-01-04T10:27:54.497+0000] {base.py:83} INFO - Using connection ID 'postgres_connect' for task execution.
[2024-01-04T10:27:54.521+0000] {sql.py:432} INFO - Running statement: 
create table if not exists incident_new(
    id serial ,
    impact integer,
    number varchar(50),
    severity integer,
    priority integer,
    assignment_group.value,
    resolve_time integer,
    category varchar(50),
    primary key(id)
), parameters: None
[2024-01-04T10:27:54.523+0000] {taskinstance.py:2699} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 437, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "."
LINE 8:     assignment_group.value,
                            ^

[2024-01-04T10:27:54.532+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=db_dg, task_id=create_post_DB, execution_date=20240104T070044, start_date=20240104T102753, end_date=20240104T102754
[2024-01-04T10:27:54.642+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 69 for task create_post_DB (syntax error at or near "."
LINE 8:     assignment_group.value,
                            ^
; 1713)
[2024-01-04T10:27:54.673+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-01-04T10:27:54.701+0000] {taskinstance.py:3281} INFO - 0 downstream tasks scheduled from follow-on schedule check
